--- a/KaggleChallenge1/Challenge1_0.75837.ipynb
+++ b/KaggleChallenge1/Challenge1_0.75837.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 295,
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5"
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 296,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 254,
+     "execution_count": 296,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 297,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
        "4  22.0      1      1  3101298  12.2875   NaN        S  "
       ]
      },
-     "execution_count": 255,
+     "execution_count": 297,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 298,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 299,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 257,
+     "execution_count": 299,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 300,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
        "Name: Name, dtype: object"
       ]
      },
-     "execution_count": 258,
+     "execution_count": 300,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 301,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 302,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 303,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 305,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 306,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.321677Z",
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 307,
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +602,7 @@
        "       'C148'], dtype=object)"
       ]
      },
-     "execution_count": 265,
+     "execution_count": 307,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 308,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 309,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 310,
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +735,7 @@
        "U         481  206"
       ]
      },
-     "execution_count": 268,
+     "execution_count": 310,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 311,
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 312,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 313,
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 314,
    "metadata": {},
    "outputs": [
     {
@@ -916,7 +916,7 @@
        "U          70.014556  29.985444"
       ]
      },
-     "execution_count": 272,
+     "execution_count": 314,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -929,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 315,
    "metadata": {},
    "outputs": [
     {
@@ -957,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 316,
    "metadata": {},
    "outputs": [
     {
@@ -1085,7 +1085,7 @@
        "4           Mr  Group 4  "
       ]
      },
-     "execution_count": 274,
+     "execution_count": 316,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1106,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 317,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1116,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 318,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.387429Z",
@@ -1142,7 +1142,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 276,
+     "execution_count": 318,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1153,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 319,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.419611Z",
@@ -1178,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 320,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.456937Z",
@@ -1205,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 321,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.481921Z",
@@ -1230,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 322,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.507642Z",
@@ -1251,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 323,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.538156Z",
@@ -1276,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 324,
    "metadata": {},
    "outputs": [
     {
@@ -1311,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 325,
    "metadata": {},
    "outputs": [
     {
@@ -1327,7 +1327,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 283,
+     "execution_count": 325,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1348,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 326,
    "metadata": {},
    "outputs": [
     {
@@ -1357,7 +1357,7 @@
        "array([1, 0, 3, 4, 2, 5, 8])"
       ]
      },
-     "execution_count": 284,
+     "execution_count": 326,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1368,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 327,
    "metadata": {},
    "outputs": [
     {
@@ -1384,7 +1384,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 285,
+     "execution_count": 327,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1405,7 +1405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 328,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.560305Z",
@@ -1436,7 +1436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 329,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.722111Z",
@@ -1454,7 +1454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 330,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.730892Z",
@@ -1475,7 +1475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 331,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.762348Z",
@@ -1492,7 +1492,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 289,
+     "execution_count": 331,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1520,7 +1520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 332,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1531,7 +1531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 333,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.790159Z",
@@ -1697,7 +1697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:05.952651Z",
@@ -1741,7 +1741,11 @@
     }
    ],
    "source": [
-    "best_model = RandomForestClassifier(random_state=42, n_jobs=-1, n_estimators=200)\n",
+    "best_model = SVC(\n",
+    "        kernel=\"rbf\",  \n",
+    "        probability=True,\n",
+    "        random_state=42,\n",
+    "    )\n",
     "best_model.fit(X_train, y_train)\n",
     "\n",
     "y_val_pred = best_model.predict(X_val)\n",
@@ -1755,7 +1759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 335,
    "metadata": {},
    "outputs": [
     {
@@ -1791,7 +1795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 336,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:06.926955Z",
