--- a/KaggleChallenge1/Challenge1_78_1.ipynb
+++ b/KaggleChallenge1/Challenge1_78_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 750,
+   "execution_count": 760,
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5"
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 751,
+   "execution_count": 761,
    "metadata": {},
    "outputs": [
     {
@@ -151,29 +151,17 @@
        "</div>"
       ],
       "text/plain": [
-       "   PassengerId  Survived  Pclass  \\\n",
-       "0            1         0       3   \n",
-       "1            2         1       1   \n",
-       "2            3         1       3   \n",
-       "3            4         1       1   \n",
-       "4            5         0       3   \n",
+       "   PassengerId  Survived  Pclass  ...     Fare Cabin  Embarked\n",
+       "0            1         0       3  ...   7.2500   NaN         S\n",
+       "1            2         1       1  ...  71.2833   C85         C\n",
+       "2            3         1       3  ...   7.9250   NaN         S\n",
+       "3            4         1       1  ...  53.1000  C123         S\n",
+       "4            5         0       3  ...   8.0500   NaN         S\n",
        "\n",
-       "                                                Name     Sex   Age  SibSp  \\\n",
-       "0                            Braund, Mr. Owen Harris    male  22.0      1   \n",
-       "1  Cumings, Mrs. John Bradley (Florence Briggs Th...  female  38.0      1   \n",
-       "2                             Heikkinen, Miss. Laina  female  26.0      0   \n",
-       "3       Futrelle, Mrs. Jacques Heath (Lily May Peel)  female  35.0      1   \n",
-       "4                           Allen, Mr. William Henry    male  35.0      0   \n",
-       "\n",
-       "   Parch            Ticket     Fare Cabin Embarked  \n",
-       "0      0         A/5 21171   7.2500   NaN        S  \n",
-       "1      0          PC 17599  71.2833   C85        C  \n",
-       "2      0  STON/O2. 3101282   7.9250   NaN        S  \n",
-       "3      0            113803  53.1000  C123        S  \n",
-       "4      0            373450   8.0500   NaN        S  "
+       "[5 rows x 12 columns]"
       ]
      },
-     "execution_count": 751,
+     "execution_count": 761,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 752,
+   "execution_count": 762,
    "metadata": {},
    "outputs": [
     {
@@ -305,22 +293,17 @@
        "</div>"
       ],
       "text/plain": [
-       "   PassengerId  Pclass                                          Name     Sex  \\\n",
-       "0          892       3                              Kelly, Mr. James    male   \n",
-       "1          893       3              Wilkes, Mrs. James (Ellen Needs)  female   \n",
-       "2          894       2                     Myles, Mr. Thomas Francis    male   \n",
-       "3          895       3                              Wirz, Mr. Albert    male   \n",
-       "4          896       3  Hirvonen, Mrs. Alexander (Helga E Lindqvist)  female   \n",
+       "   PassengerId  Pclass  ... Cabin Embarked\n",
+       "0          892       3  ...   NaN        Q\n",
+       "1          893       3  ...   NaN        S\n",
+       "2          894       2  ...   NaN        Q\n",
+       "3          895       3  ...   NaN        S\n",
+       "4          896       3  ...   NaN        S\n",
        "\n",
-       "    Age  SibSp  Parch   Ticket     Fare Cabin Embarked  \n",
-       "0  34.5      0      0   330911   7.8292   NaN        Q  \n",
-       "1  47.0      1      0   363272   7.0000   NaN        S  \n",
-       "2  62.0      0      0   240276   9.6875   NaN        Q  \n",
-       "3  27.0      0      0   315154   8.6625   NaN        S  \n",
-       "4  22.0      1      1  3101298  12.2875   NaN        S  "
+       "[5 rows x 11 columns]"
       ]
      },
-     "execution_count": 752,
+     "execution_count": 762,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 753,
+   "execution_count": 763,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 754,
+   "execution_count": 764,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +371,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 754,
+     "execution_count": 764,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 755,
+   "execution_count": 765,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.321677Z",
@@ -428,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 756,
+   "execution_count": 766,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.353720Z",
@@ -610,36 +593,23 @@
        "</div>"
       ],
       "text/plain": [
-       "     Survived  Pclass                                               Name  \\\n",
-       "0           0       3                            Braund, Mr. Owen Harris   \n",
-       "1           1       1  Cumings, Mrs. John Bradley (Florence Briggs Th...   \n",
-       "2           1       3                             Heikkinen, Miss. Laina   \n",
-       "3           1       1       Futrelle, Mrs. Jacques Heath (Lily May Peel)   \n",
-       "4           0       3                           Allen, Mr. William Henry   \n",
-       "..        ...     ...                                                ...   \n",
-       "886         0       2                              Montvila, Rev. Juozas   \n",
-       "887         1       1                       Graham, Miss. Margaret Edith   \n",
-       "888         0       3           Johnston, Miss. Catherine Helen \"Carrie\"   \n",
-       "889         1       1                              Behr, Mr. Karl Howell   \n",
-       "890         0       3                                Dooley, Mr. Patrick   \n",
-       "\n",
-       "        Sex        Age  SibSp  Parch     Fare Embarked  \n",
-       "0      male  22.000000      1      0   7.2500        S  \n",
-       "1    female  38.000000      1      0  71.2833        C  \n",
-       "2    female  26.000000      0      0   7.9250        S  \n",
-       "3    female  35.000000      1      0  53.1000        S  \n",
-       "4      male  35.000000      0      0   8.0500        S  \n",
-       "..      ...        ...    ...    ...      ...      ...  \n",
-       "886    male  27.000000      0      0  13.0000        S  \n",
-       "887  female  19.000000      0      0  30.0000        S  \n",
-       "888  female  29.699118      1      2  23.4500        S  \n",
-       "889    male  26.000000      0      0  30.0000        C  \n",
-       "890    male  32.000000      0      0   7.7500        Q  \n",
+       "     Survived  Pclass  ...     Fare Embarked\n",
+       "0           0       3  ...   7.2500        S\n",
+       "1           1       1  ...  71.2833        C\n",
+       "2           1       3  ...   7.9250        S\n",
+       "3           1       1  ...  53.1000        S\n",
+       "4           0       3  ...   8.0500        S\n",
+       "..        ...     ...  ...      ...      ...\n",
+       "886         0       2  ...  13.0000        S\n",
+       "887         1       1  ...  30.0000        S\n",
+       "888         0       3  ...  23.4500        S\n",
+       "889         1       1  ...  30.0000        C\n",
+       "890         0       3  ...   7.7500        Q\n",
        "\n",
        "[891 rows x 9 columns]"
       ]
      },
-     "execution_count": 756,
+     "execution_count": 766,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 757,
+   "execution_count": 767,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +634,7 @@
        "Name: Name, dtype: object"
       ]
      },
-     "execution_count": 757,
+     "execution_count": 767,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 758,
+   "execution_count": 768,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -685,14 +655,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 759,
+   "execution_count": 769,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\QUOC VIET\\AppData\\Local\\Temp\\ipykernel_18132\\2432131351.py:2: FutureWarning: \n",
+      "C:\\Users\\QUOC VIET\\AppData\\Local\\Temp\\ipykernel_29856\\2432131351.py:2: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -722,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 760,
+   "execution_count": 770,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -734,14 +704,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 761,
+   "execution_count": 771,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\QUOC VIET\\AppData\\Local\\Temp\\ipykernel_18132\\3021317157.py:2: FutureWarning: \n",
+      "C:\\Users\\QUOC VIET\\AppData\\Local\\Temp\\ipykernel_29856\\3021317157.py:2: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -770,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 762,
+   "execution_count": 772,
    "metadata": {},
    "outputs": [
     {
@@ -803,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 763,
+   "execution_count": 773,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -813,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 764,
+   "execution_count": 774,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.387429Z",
@@ -838,7 +808,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 764,
+     "execution_count": 774,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -849,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 765,
+   "execution_count": 775,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.419611Z",
@@ -870,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 766,
+   "execution_count": 776,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.456937Z",
@@ -897,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 767,
+   "execution_count": 777,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.481921Z",
@@ -922,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 768,
+   "execution_count": 778,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.507642Z",
@@ -946,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 769,
+   "execution_count": 779,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.538156Z",
@@ -971,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 770,
+   "execution_count": 780,
    "metadata": {},
    "outputs": [
     {
@@ -1006,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 771,
+   "execution_count": 781,
    "metadata": {},
    "outputs": [
     {
@@ -1022,7 +992,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 771,
+     "execution_count": 781,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1043,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 772,
+   "execution_count": 782,
    "metadata": {},
    "outputs": [
     {
@@ -1052,7 +1022,7 @@
        "array([1, 0, 3, 4, 2, 5, 8])"
       ]
      },
-     "execution_count": 772,
+     "execution_count": 782,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1063,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 773,
+   "execution_count": 783,
    "metadata": {},
    "outputs": [
     {
@@ -1079,7 +1049,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 773,
+     "execution_count": 783,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1100,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 774,
+   "execution_count": 784,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.560305Z",
@@ -1131,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 775,
+   "execution_count": 785,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.722111Z",
@@ -1149,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 776,
+   "execution_count": 786,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.730892Z",
@@ -1170,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 777,
+   "execution_count": 787,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.762348Z",
@@ -1187,7 +1157,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 777,
+     "execution_count": 787,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1215,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 778,
+   "execution_count": 788,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1226,7 +1196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 779,
+   "execution_count": 789,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.790159Z",
@@ -1247,14 +1217,24 @@
       "  ROC AUC:  0.8713\n",
       "------------------------------\n",
       "Random Forest Results:\n",
-      "  Accuracy: 0.8492\n",
-      "  F1 Score: 0.7939\n",
-      "  ROC AUC:  0.8458\n",
+      "  Accuracy: 0.8324\n",
+      "  F1 Score: 0.7656\n",
+      "  ROC AUC:  0.8548\n",
       "------------------------------\n",
       "XGBoost Results:\n",
-      "  Accuracy: 0.7989\n",
-      "  F1 Score: 0.7391\n",
-      "  ROC AUC:  0.8306\n",
+      "  Accuracy: 0.8380\n",
+      "  F1 Score: 0.7820\n",
+      "  ROC AUC:  0.8374\n",
+      "------------------------------\n",
+      "Decision Tree Results:\n",
+      "  Accuracy: 0.8212\n",
+      "  F1 Score: 0.7612\n",
+      "  ROC AUC:  0.8510\n",
+      "------------------------------\n",
+      "SVC Results:\n",
+      "  Accuracy: 0.8324\n",
+      "  F1 Score: 0.7692\n",
+      "  ROC AUC:  0.8548\n",
       "------------------------------\n"
      ]
     }
@@ -1263,12 +1243,33 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from xgboost import XGBClassifier\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.metrics import accuracy_score, f1_score, roc_auc_score\n",
+    "from sklearn.svm import SVC\n",
     "\n",
     "models = {\n",
     "    'Logistic Regression': LogisticRegression(random_state=42, max_iter=1000),\n",
-    "    'Random Forest': RandomForestClassifier(random_state=42, n_jobs=-1, n_estimators=200),\n",
-    "    'XGBoost': XGBClassifier(eval_metric='logloss', random_state=42, n_jobs=-1),\n",
+    "    'Random Forest': RandomForestClassifier(random_state=42, \n",
+    "                                    n_jobs=-1, \n",
+    "                                    n_estimators=200, \n",
+    "                                    max_depth=5,\n",
+    "                                    min_samples_split=2,\n",
+    "                                    min_samples_leaf=1\n",
+    "    ),\n",
+    "    'XGBoost': XGBClassifier(n_estimators=500,\n",
+    "                            learning_rate=0.05,\n",
+    "                            max_depth=4,\n",
+    "                            subsample=0.8,\n",
+    "                            colsample_bytree=0.8,\n",
+    "                            random_state=42\n",
+    "                        ),\n",
+    "    'Decision Tree': DecisionTreeClassifier(max_depth=7, max_features=12, max_leaf_nodes=5,\n",
+    "    random_state=42),\n",
+    "    \"SVC\": SVC(\n",
+    "        kernel=\"rbf\",     \n",
+    "        probability=True,\n",
+    "        random_state=42,\n",
+    "    ),\n",
     "}\n",
     "\n",
     "for name, model in models.items():\n",
@@ -1289,7 +1290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 780,
+   "execution_count": 790,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:05.952651Z",
@@ -1323,17 +1324,21 @@
       "2    0\n",
       "3    0\n",
       "4    1\n",
-      "5    0\n",
+      "5    1\n",
       "6    1\n",
-      "7    1\n",
-      "8    1\n",
+      "7    0\n",
+      "8    0\n",
       "9    0\n",
       "dtype: int64\n"
      ]
     }
    ],
    "source": [
-    "best_model = XGBClassifier(eval_metric='logloss', random_state=42, n_jobs=-1)\n",
+    "best_model = SVC(\n",
+    "        kernel=\"rbf\",     \n",
+    "        probability=True,\n",
+    "        random_state=42,\n",
+    "    )\n",
     "best_model.fit(X_train, y_train)\n",
     "\n",
     "y_val_pred = best_model.predict(X_val)\n",
@@ -1347,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 781,
+   "execution_count": 791,
    "metadata": {},
    "outputs": [
     {
@@ -1358,16 +1363,16 @@
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.84      0.84      0.84       110\n",
-      "           1       0.74      0.74      0.74        69\n",
+      "           0       0.84      0.90      0.87       110\n",
+      "           1       0.82      0.72      0.77        69\n",
       "\n",
-      "    accuracy                           0.80       179\n",
-      "   macro avg       0.79      0.79      0.79       179\n",
-      "weighted avg       0.80      0.80      0.80       179\n",
+      "    accuracy                           0.83       179\n",
+      "   macro avg       0.83      0.81      0.82       179\n",
+      "weighted avg       0.83      0.83      0.83       179\n",
       "\n",
       "Confusion Matrix:\n",
-      "[[92 18]\n",
-      " [18 51]]\n"
+      "[[99 11]\n",
+      " [19 50]]\n"
      ]
     }
    ],
@@ -1383,7 +1388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 782,
+   "execution_count": 792,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:06.926955Z",
